# color

./: CMakeLists.txt  Color.py  Main.qml  color.py  color.sublime-project  color.sublime-workspace  color_funcs.py  conversions.py  defaults.py  main.py  main.qml  mask.frag  pickies.py  qml_file.qml  readme.txt
color_modules/: ColorEntry.qml  ColorEntryContainer.qml  ColorPage.qml  ColorPageHeader.qml  ColorPageHeaderEntry.qml  ColorPager.qml  ColorTrack.qml  ColorWindowControls.qml  ColorWindowPreview.qml  ColorWindowSettings.qml
modules/: ClrDisplay.qml  ClrFormatHex.qml  ClrFormatHsv.qml  ClrOption.qml  ClrOptionConnectAlpha.qml  ClrOptionShape.qml  ClrPageFormat.qml  ClrPageOptions.qml  ClrPager.qml  ClrRect.qml  ClrSettings.qml  ClrSlider.qml  ClrTabBar.qml  ClrText.qml  ClrTextInput.qml  ColorControls.qml  ColorControlsWindow.qml  ColorDisplay.qml  ColorEntry.qml  ColorEntryContainer.qml  ColorFormat.qml  ColorFormatContainer.qml  ColorPreview.qml  ColorPreviewWindow.qml  ColorRect.qml  ColorSettings.qml  ColorSettingsWindow.qml  ColorSlider.qml  ColorTabBar.qml  ColorText.qml  ColorTrack.qml  Controls.qml  DragFunction.qml  Dropdown.qml  Dropown.qml  EncodingLabel.qml  EncodingMenu.qml  EncodingMenuEntry.qml  LiveValues.qml  Meter.qml  (+10 more)
qml/: ClrControls.qml  ClrDivider.qml  ClrFormat.qml  ClrFormatRgb.qml  ClrList.qml  ClrOptionPreview.qml  ClrPage.qml  ClrPageOptions.qml  ClrRect.qml  ClrSettings.qml  ClrTab.qml  main.qml
shaders/: mask.frag.qsb
src/: SettingsTree.cpp  SettingsTree.h  main.cpp
